 ** (r198) Updated bar edge offsets for Masque r366+
 ** (r199) TellMeWhen.lua:1404: attempt to index field 'Font' (a nil value)
 ** (r201) The suggestion list will now update its display when new item information is obtained from the server
 ** (r203) TellMeWhen_Options.lua:2432: attempt to concatenate local "name" (a nil value)
 ** (r204) Invalid itemIDs are now checked and purged from the cache when a new version of WoW is detected.

 
===v4.5.2===
 * Added "%m" as a text substitution for the name of the unit that you are currently mousing over.
 * Existing substitutions "%t" and "%f" now work in all output locations.
 * The change made in 4.5.0 to reactve icons and conditions has been made optional. Those checking abilities such as raging blow or execute should probably enable this option.
 * Parenthesis in the condition editor are prettier now
 * Tooltip scan conditions now use the new return values of UnitAura added in WoW 4.2, and have been appropriately renamed to "Aura Variable". The result is an increase in efficiency at the cost of a bit of accuracy in some obscure cases.
 * Spell caching and filtering is now between 1500% and 2000% faster. (Seriously.)
 * New Conditions:
 ** GCD active
 ** Unit Threat - Scaled
 ** Unit Threat - Raw
 * Bug Fixes:
 ** (r192) Put the final nail in the coffin of the cooldown clock framelevel bug.

===v4.5.1===
 * You can now shift-click links into the Announcement EditBox.
 * You can now shift-click links into the Choose Name/ID EditBox to insert a spellID/itemID.
 * Suggesting a spellID is now about 75% more efficient.
 * New text output locations:
 ** Smart Channel
 ** Chat Frame
 * Bug Fixes:
 ** (r178) The "Ignore Runes" setting should no longer appear for item cooldown icons
 ** (r179) Meta icons should now inherit icon properties from other icons a little better.
 ** (r181) Attempted a possible fix to the error 132s that some people are getting when they close the icon editor after viewing the group settings tab.