@@ -34,7 +34,7 @@ local DRData = LibStub("DRData-1.0", true)
 TELLMEWHEN_VERSION = "4.5.3"
 TELLMEWHEN_VERSION_MINOR = strmatch(" @project-version@", " r%d+") or ""
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 45304 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
+TELLMEWHEN_VERSIONNUMBER = 45308 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
 if TELLMEWHEN_VERSIONNUMBER > 46000 or TELLMEWHEN_VERSIONNUMBER < 45000 then return error("YOU SCREWED UP THE VERSION NUMBER OR DIDNT CHANGE THE SAFETY LIMITS") end -- safety check because i accidentally made the version number 414069 once
 
 TELLMEWHEN_MAXGROUPS = 1 	--this is a default, used by SetTheory (addon), so dont rename
@@ -3395,8 +3395,19 @@ end
 function TMW:GetItemIDs(icon, setting, firstOnly, toname)
 	-- note: these cannot be cached because of slotIDs
 
+	
 	local names = TMW:SplitNames(setting)
-
+	-- REMOVE SPELL DURATIONS (FOR WHATEVER REASON THE USER MIGHT HAVE PUT THEM IN FOR ITEMS)
+	for k, item in pairs(names) do
+		if strfind(item, ":[%d:%s%.]*$") then
+			local new = strmatch(item, "(.-):[%d:%s%.]*$")
+			names[k] = tonumber(new) or new -- turn it into a number if it is one
+		end
+	end
+	if icon then
+		names = TMW:lower(names)
+	end
+	
 	for k, item in ipairs(names) do
 		item = strtrim(item) -- trim trailing spaces
 		local itemID = tonumber(item) --if it is a number then it might be the itemID if them item
@@ -3532,7 +3543,11 @@ function TMW:GetUnits(icon, setting, dontreplace)
 end
 
 local function replace(text, find, rep)
-	-- using this allows for the replacement of ";       " to "; " in one call
+	-- using this allows for the replacement of ";       " to "; " in one external call
+	if strfind(rep, find) then
+		print("RECURSION DETECTED: FIND=", find, "REP=", rep)
+		return text
+	end
 	while strfind(text, find) do
 		text = gsub(text, find, rep)
 	end
