@@ -9,7 +9,8 @@
  ** (r199) TellMeWhen.lua:1404: attempt to index field 'Font' (a nil value)
  ** (r201) The suggestion list will now update its display when new item information is obtained from the server
  ** (r203) TellMeWhen_Options.lua:2432: attempt to concatenate local "name" (a nil value)
- ** (r204) Invalid itemIDs are now checked and purged from the cache when a new version of WoW is detected.
+ ** (r204) Invalid itemIDs are now checked and purged from the cache when a new version of WoW is detected
+ ** (r205) Spell durations are now removed from item cooldown name data when it is parsed
 
  
 ===v4.5.2===
